# SABER

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SABER_WRITEUP_DRAFT.md  TECHNICAL_REPORT.md  _smoke_refusal.py  batch_runs.py  config.py  continue_saber_35b.py  convert_to_gguf.py  gemma4_saber_readme.md  generate_plots.py  generate_saber_report.py  ornstein36_gguf_readme.md  ornstein36_saber_readme.md  ornstein_saber_readme.md  pyproject.toml  quantize_all_ahead.sh  quantize_ornstein.py  requirements.txt  resume_gguf.sh  run_ornstein26b_sweep.py  run_ornstein31b_sweep.py  run_ornstein36_35b.py  run_saber.py  saber.py  saber_autotune.py  saber_eval_kld.py  saber_eval_refusal.py  saber_lab_server.py  saber_lab_tui.py  saber_sweep_results.json  sweep.py  validate_ornstein36_zero_refusal.py
docs/: CURRENT_RESULTS.md  RELEASE_CHECKLIST.md  SAFETY.md  TESTING.md
docs/model-cards/: ornstein36_gguf_readme.md  ornstein36_saber_readme.md
docs/research/: SABER_WRITEUP_DRAFT.md
docs/results/: saber_browser_report.html
examples/: quickstart_gemma4_e2b.sh
runs/gemma4_e2b_a070/: kld_result.json  refusal_result.json  saber_result.json
runs/gemma4_e2b_a085/: kld_result.json  refusal_result.json  saber_result.json
runs/gemma4_e2b_a100/: kld_result.json  refusal_result.json  saber_result.json
runs/gemma4_e4b_a070/: kld_result.json  refusal_result.json  saber_result.json
runs/gemma4_e4b_a085/: kld_result.json  refusal_result.json  saber_result.json
runs/gemma4_e4b_a100/: kld_result.json  refusal_result.json  saber_result.json
runs/gemma4_e4b_a115/: kld_result.json  (+2 more)
(+130 files in other folders)
